[project]
name = "first-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "more-itertools>=10.8.0",
    "numpy>=2.3.4",
    "pytelegrambotapi>=4.29.1",
    "requests>=2.32.5",
    "telebot>=0.0.5",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
